# Microsoft-CognitiveServices-CPP-SDK

./: .gitmodules  README.md
examples/: CMakeCache.txt  CMakeLists.txt  FindGphoto2.cmake  analyze.cpp  camera-ai.cpp  example01.cpp  recognize-text.cpp  smart.cpp  subscriptionKey
examples/qt/: Makefile  Makefile.Debug  Makefile.Release  mscognitive.pro  object_script.mscognitive.Debug  object_script.mscognitive.Release
examples/src/: analyze.cpp  camera-ai.cpp  custom-vision.cpp  describe.cpp  face.cpp  ocr.cpp  recognize-domain-specific-content.cpp  recognize-text.cpp  tag.cpp  thumbnail.cpp
gphoto2/: gphoto2.cpp  gphoto2.h
microsoft/cognitive/: cognitive.cpp  cognitive.h
microsoft/cognitive/cv/: analysis.cpp  analysis.h  custom_vision_prediction.cpp  custom_vision_prediction.h  cv.cpp  cv.h  description.cpp  description.h  domainspecificcontent.cpp  domainspecificcontent.h  face.cpp  ocr.cpp  ocr.h  person.cpp  person.h  person_group.cpp  recognize_text.cpp  recognize_text.h  thumbnail.cpp  thumbnail.h
microsoft/utils/: http.cpp  http.h  json_serializable.cpp  json_serializable.h  string.cpp  string.h
